CSS consolidated for main content section

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -76,25 +76,7 @@ p {
 }
 
 /* main style start*/
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
+.content article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -105,31 +87,13 @@ p {
 /*main style end*/
 
 /*main img start*/
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
+.content article img {
     max-height: 200px;
 }
 /*main img end*/
 
 /*main header start*/
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.content article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
