--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -111,53 +111,21 @@ p {
 }
 
 /* benefit article style start */
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
+.benefits article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 /* benefit article style end */
 
 /*benefit-header style start */
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
+.benefits article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 /*benefit header*/
 
 /* benefit text style start */
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefits article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
